data/derived/comb/progs/unify/prog8951.ml.out
Characters 74-83:
  else x::clone x n-1;;
          ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
